//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "GIGA NFT 2.0" {
  database_type: 'PostgreSQL'
  Note: 'GIGA NFT 2.0'
}

Table Auth {
  id String [pk]
  otp String [unique, not null]
  refreshToken String
  accessToken String
  user giga_users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table giga_roles {
  role_id String [pk]
  permissions giga_permissions [not null]
  name Role [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
}

Table giga_permissions {
  permission_id String [pk]
  action Permissions [unique, not null]
  subject String [not null]
  conditions String [not null]
  reason String [not null]
  role_id String [not null]
  Roles giga_roles [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
}

Table giga_transactions {
  id Int [pk, increment]
  txHash Bytes [unique, not null]
  txStatus TxStatus [not null, default: 'NEW']
  contractName String
  contractAddress String
  timestamp Int
  method String
  methodParams Json[] [not null]
  blockNumber Int
  from String
  to String
  value String
  remarks String
  events Json[] [not null]
}

Table giga_users {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  walletAddress Bytes [unique]
  profileImage String
  isActive Boolean [not null, default: true]
  isBlocked Boolean [not null, default: false]
  lastLoggedIn DateTime [default: `now()`]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  ContributedData giga_contributed_data [not null]
  Points giga_points [not null]
  CreatedBy giga_points [not null]
  Auth Auth [not null]
  roles Role[] [not null]
  isArchived Boolean [not null, default: false]
  vote giga_vote [not null]
  createdBy giga_vote [not null]
}

Table giga_school {
  school_id String [pk]
  giga_id_school String [unique, not null]
  school_status SchoolStatus [not null, default: 'Open']
  education_level Level [not null, default: 'Unkown']
  physical_address String
  name String [not null]
  teachers Int
  class_rooms Int
  computer_lab Boolean [not null, default: false]
  electricity_available Boolean [not null, default: false]
  connectivity_status Boolean [not null, default: false]
  school_website String
  email_contact String
  phone_number String
  country_id Int [not null]
  twiter_handle String
  youtube String
  daily_check_app Boolean [not null, default: true]
  computers Int
  lon Float [not null]
  lat Float [not null]
  location String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  season_Id String
  contributedSeason giga_season
  isArchived Boolean [not null, default: false]
}

Table giga_contributed_data {
  contributed_UUID String [pk]
  contributed_data Json [not null]
  status Status [not null, default: 'Pending']
  school_Id String
  contributedUserId String [not null]
  contributedUser giga_users [not null]
  season_ID String [not null]
  contributedSeason giga_season [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
  points giga_points [not null]
  vote giga_vote [not null]
}

Table giga_season {
  season_id String [pk]
  season_name String [not null]
  season_start_date DateTime
  season_end_date DateTime
  season_status Season_Status [not null, default: 'Start']
  ContributedData giga_contributed_data [not null]
  Points giga_points [not null]
  School giga_school [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
}

Table giga_points {
  id Int [pk, increment]
  points Int [not null]
  leaderBoardType LeaderBoardType [not null]
  contributionType ContributionType [not null]
  isConfirmed Boolean
  isValid Boolean
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  season_id String
  season giga_season
  createdBy String
  creator giga_users
  user_id String [not null]
  user giga_users [not null]
  isArchived Boolean [not null, default: false]
  contributedDataId String
  contributedData giga_contributed_data
}

Table giga_vote {
  vote_id String [pk]
  vote_type VOTE_TYPE [not null]
  user_id String [not null]
  user giga_users [not null]
  contributed_Id String [not null]
  contributedData giga_contributed_data [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  deletedAt DateTime
  isArchived Boolean [not null, default: false]
  createdBy String [not null]
  creator giga_users [not null]

  indexes {
    (user_id, contributed_Id) [unique]
  }
}

Enum Role {
  ADMIN
  USER
  VALIDATOR
  CONTRIBUTOR
  PENDING
}

Enum Permissions {
  READ
  WRITE
  UPDATE
  DELETE
  MANAGE
  SEASON_WRITE
  SEASON_READ
  SEASON_UPDATE
  SEASON_DELETE
  SCHOOL_UPDATE
  SCHOOL_READ
  VALIDATOR_ADD
  VALIDATOR_UPDATE
  VALIDATOR_DELETE
  DATA_VALID
  USER_UPDATE
  DATA_CONTRIBUTE
  DATA_VOTE
}

Enum TxStatus {
  NEW
  PENDING
  SUCCESS
  FAIL
  ERROR
}

Enum VOTE_TYPE {
  UPVOTE
  DOWNVOTE
}

Enum SchoolStatus {
  Open
  Closed
}

Enum Type {
  Private
  Public
}

Enum Level {
  Primary
  Secondary
  Higher_Secondary
  Unkown
}

Enum Status {
  Validated
  Rejected
  Pending
}

Enum LeaderBoardType {
  SEASONAL
  GLOBAL
  GENERAL
}

Enum Season_Status {
  Start
  Completed
  Suspended
}

Enum ContributionType {
  VOTE
  CONTRIBUTE
}

Ref: Auth.id > giga_users.id

Ref: giga_permissions.role_id > giga_roles.role_id

Ref: giga_school.season_Id > giga_season.season_id

Ref: giga_contributed_data.contributedUserId > giga_users.id

Ref: giga_contributed_data.season_ID > giga_season.season_id

Ref: giga_points.season_id > giga_season.season_id

Ref: giga_points.createdBy > giga_users.id

Ref: giga_points.user_id > giga_users.id

Ref: giga_points.contributedDataId > giga_contributed_data.contributed_UUID

Ref: giga_vote.user_id > giga_users.id

Ref: giga_vote.contributed_Id > giga_contributed_data.contributed_UUID

Ref: giga_vote.createdBy > giga_users.id